added in the google slide pngs

--- a/manuscript/index.html
+++ b/manuscript/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Author Name" />
 
 
-<meta name="date" content="2021-04-29" />
+<meta name="date" content="2021-04-30" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -149,6 +149,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.2" data-path="topic-of-section.html"><a href="topic-of-section.html#print-out-session-info"><i class="fa fa-check"></i><b>2.2</b> Print out session info</a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="uses-cases-for-bookdown-to-leanpub.html"><a href="uses-cases-for-bookdown-to-leanpub.html"><i class="fa fa-check"></i><b>3</b> Uses cases for Bookdown to Leanpub</a></li>
+<li class="chapter" data-level="4" data-path="figures.html"><a href="figures.html"><i class="fa fa-check"></i><b>4</b> Figures</a>
+<ul>
+<li class="chapter" data-level="4.1" data-path="figures.html"><a href="figures.html#make-a-plot"><i class="fa fa-check"></i><b>4.1</b> Make a plot</a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="about-the-authors.html"><a href="about-the-authors.html"><i class="fa fa-check"></i>About the Authors</a></li>
 </ul>
 
@@ -170,7 +174,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">about</h1>
 <p class="author"><em>Author Name</em></p>
-<p class="date"><em>2021-04-29</em></p>
+<p class="date"><em>2021-04-30</em></p>
 </div>
 <div id="about-this-course" class="section level1 unnumbered">
 <h1>About this Course</h1>
