changing _output-itcr.yml repo link back to template and updating itcr hero image name

--- a/assets/big-image-itcr.html
+++ b/assets/big-image-itcr.html
@@ -8,6 +8,6 @@
 
 
 <div class="hero-image-container"> 
-  <img class= "hero-image" src="assets/thin_main_image_stripe.png">
+  <img class= "hero-image" src="assets/itcr_main_image.png">
  <!-- <img class= "hero-image" src="https://raw.githubusercontent.com/jhudsl/ITCR_Cancer_Research_Leadership/main/images/main_image_dasl.png"> -->
 </div>
