--- a/assets/big-image.html
+++ b/assets/big-image.html
@@ -7,6 +7,7 @@
         
 
 
-<div class="hero-image-container"> 
-  <img class= "hero-image" src= "assets/dasl_thin_main_image.png">
+
+<div class="hero-image-container">
+  <img class= "hero-image" src= "https://github.com/jhudsl/OTTR_Template/raw/main/assets/dasl_thin_main_image.png">
 </div>
