--- a/style-sets/fhdasl/copy_to_assets/big-image_fhdasl.html
+++ b/style-sets/fhdasl/copy_to_assets/big-image_fhdasl.html
@@ -2,11 +2,11 @@
   <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=10.0,initial-scale=1.0">
   <!--script src="https://kit.fontawesome.com/6a26f47516.js"></script-->
   <!--<script src="assets/hideOutput.js"></script>-->
-  <link href="assets/fhdasl_style/style.css" rel="stylesheet">
+  <link href="assets/style.css" rel="stylesheet">
 </head>
         
 
 
 <div class="hero-image-container"> 
-  <img class= "hero-image" src="assets/fhdasl_style/dasl_thin_main_image.png">
+  <img class= "hero-image" src="assets/dasl_thin_main_image.png">
 </div>
