--- a/GA_Script.html
+++ b/GA_Script.html
@@ -1,10 +1,10 @@
   
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-RPK3GVLSKR"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id={MeasurementID}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-RPK3GVLSKR');
+  gtag('config', '{MeasurementID}');
 </script>
